--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,110 @@
-cca_zoo==1.16.2
+anyio==3.5.0
+argon2-cffi==21.3.0
+argon2-cffi-bindings==21.2.0
+attrs==21.4.0
+Babel==2.9.1
+backcall==0.2.0
+bleach==4.1.0
+cached-property==1.5.2
+cca-zoo==1.16.2
+certifi==2021.10.8
+cffi==1.15.0
+charset-normalizer==2.0.12
+cycler==0.11.0
+debugpy==1.5.1
+decorator==5.1.1
+defusedxml==0.7.1
 dill==0.3.4
+docopt==0.6.2
+entrypoints==0.4
+et-xmlfile==1.1.0
+fonttools==4.29.1
+h5py==3.6.0
+idna==3.3
+importlib-metadata==4.11.1
+importlib-resources==5.4.0
+iniconfig==1.1.1
+ipykernel==6.9.1
+ipython==7.31.1
+ipython-genutils==0.2.0
+ipywidgets==7.6.5
+jedi==0.18.1
+Jinja2==3.0.3
+joblib==1.1.0
+json5==0.9.6
+jsonschema==4.4.0
+jupyter==1.0.0
+jupyter-client==7.1.2
+jupyter-console==6.4.0
+jupyter-core==4.9.2
+jupyter-server==1.13.5
+jupyterlab==3.2.9
+jupyterlab-pygments==0.1.2
+jupyterlab-server==2.10.3
+jupyterlab-widgets==1.0.2
+kiwisolver==1.3.2
+MarkupSafe==2.1.0
 matplotlib==3.5.1
+matplotlib-inline==0.1.3
+mistune==0.8.4
+mvlearn==0.4.1
+nbclassic==0.3.5
+nbclient==0.5.11
+nbconvert==6.4.2
+nbformat==5.1.3
+nest-asyncio==1.5.4
+nose==1.3.7
+notebook==6.4.8
 numpy==1.21.5
+openpyxl==3.0.9
+packaging==21.3
 pandas==1.3.5
-scikit_learn==1.0.2
+pandocfilters==1.5.0
+parso==0.8.3
+patsy==0.5.2
+pexpect==4.8.0
+pickleshare==0.7.5
+Pillow==9.0.1
+pipreqs==0.4.13
+pluggy==1.0.0
+prometheus-client==0.13.1
+prompt-toolkit==3.0.28
+ptyprocess==0.7.0
+py==1.11.0
+pycparser==2.21
+Pygments==2.11.2
+pyparsing==3.0.7
+pyrcca==0.2
+pyrsistent==0.18.1
+pytest==7.1.2
+python-dateutil==2.8.2
+pytz==2021.3
+pyzmq==22.3.0
+qtconsole==5.2.2
+QtPy==2.0.1
+requests==2.27.1
+scikit-learn==1.0.2
+scipy==1.7.3
 seaborn==0.11.2
+Send2Trash==1.8.0
+six==1.16.0
+sklearn==0.0.post1
+sniffio==1.2.0
+statannotations==0.5.0
 statsmodels==0.13.5
+tensorly==0.7.0
+terminado==0.13.1
+testpath==0.6.0
+threadpoolctl==3.1.0
+tomli==2.0.1
+tornado==6.1
+tqdm==4.64.0
+traitlets==5.1.1
+typing_extensions==4.1.1
+urllib3==1.26.8
+wcwidth==0.2.5
+webencodings==0.5.1
+websocket-client==1.2.3
+widgetsnbextension==3.5.2
+yarg==0.1.9
+zipp==3.7.0
